<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/item_edit_image"
                style="@style/image_style"
                android:contentDescription="@string/inventory_image" />

            <Button
                android:id="@+id/button_load_image"
                style="@style/button"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:text="@string/load_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/name_text"
                style="@style/detail_text"
                android:text="@string/name_text" />

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/edit_text_style"
                android:hint="@string/name_edit_text"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/price_text"
                style="@style/detail_text"
                android:text="@string/price_text" />

            <EditText
                android:id="@+id/price_edit_text"
                style="@style/edit_text_style"
                android:hint="@string/price_edit_text"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/max_quantity_text"
                style="@style/detail_text"
                android:text="@string/max_quantity_text" />

            <TextView
                android:id="@+id/max_quantity_amount"
                style="@style/detail_text"
                android:text="@string/max_quantity_amount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/decrease_quantity_button"
                style="@style/button"
                android:text="@string/minus" />

            <Button
                android:id="@+id/increase_quantity_button"
                style="@style/button"
                android:text="@string/plus" />

            <TextView
                android:id="@+id/current_quantity_text"
                style="@style/detail_text"
                android:layout_width="0dp"
                android:text="@string/current_quantity_amount" />

            <Button
                android:id="@+id/order_button"
                style="@style/button"
                android:text="@string/order_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>